RESOLVED FIXED 179039
[WPE] -Wsign-compare warning in EventSenderProxyWPE.cpp
https://bugs.webkit.org/show_bug.cgi?id=179039
Summary [WPE] -Wsign-compare warning in EventSenderProxyWPE.cpp
Michael Catanzaro
Reported 2017-10-30 17:29:42 PDT
In bug #178899 I was accidentally using a release build, so I missed a spot: [1342/1390] Building CXX object Tools/...nner.dir/wpe/EventSenderProxyWPE.cpp.o In file included from ../../Source/WTF/wtf/CheckedArithmetic.h:29:0, from ../../Source/WTF/wtf/Vector.h:29, from ../../Source/WTF/wtf/Deque.h:37, from ../../Tools/WebKitTestRunner/EventSenderProxy.h:30, from ../../Tools/WebKitTestRunner/wpe/EventSenderProxyWPE.cpp:27: ../../Tools/WebKitTestRunner/wpe/EventSenderProxyWPE.cpp: In member function ‘void WTR::EventSenderProxy::updateTouchPoint(int, int, int)’: ../../Tools/WebKitTestRunner/wpe/EventSenderProxyWPE.cpp:292:32: warning: comparison between signed and unsigned integer expressions [-Wsign-compare] ASSERT(index >= 0 && index <= m_touchEvents.size()); ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~ ../../Source/WTF/wtf/Assertions.h:301:11: note: in definition of macro ‘ASSERT’ if (!(assertion)) { \ ^~~~~~~~~ ../../Tools/WebKitTestRunner/wpe/EventSenderProxyWPE.cpp: In member function ‘void WTR::EventSenderProxy::releaseTouchPoint(int)’: ../../Tools/WebKitTestRunner/wpe/EventSenderProxyWPE.cpp:367:32: warning: comparison between signed and unsigned integer expressions [-Wsign-compare] ASSERT(index >= 0 && index <= m_touchEvents.size()); ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~ ../../Source/WTF/wtf/Assertions.h:301:11: note: in definition of macro ‘ASSERT’ if (!(assertion)) { \ ^~~~~~~~~
Attachments
Patch (1.78 KB, patch)
2017-10-30 19:36 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2017-10-30 19:36:42 PDT
WebKit Commit Bot
Comment 2 2017-11-06 06:42:58 PST
Comment on attachment 325412 [details] Patch Clearing flags on attachment: 325412 Committed r224488: <https://trac.webkit.org/changeset/224488>
WebKit Commit Bot
Comment 3 2017-11-06 06:43:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.