[WPE] -Wsign-compare warning in EventSenderProxyWPE.cpp https://bugs.webkit.org/show_bug.cgi?id=179039

Reviewed by Žan Doberšek.

* WebKitTestRunner/wpe/EventSenderProxyWPE.cpp:
(WTR::EventSenderProxy::updateTouchPoint):
(WTR::EventSenderProxy::releaseTouchPoint):


Canonical link: https://commits.webkit.org/195407@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224488 268f45cc-cd09-0410-ab3c-d52691b4dbfc